src/objects/Account_Details__c.object
<CustomObject>
    <description>This Object will be used to store all the MemberShip Account as well as Sub-Account related information.</description>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <externalId>true</externalId>
        <label>AccountID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Check__c</fullName>
        <formula>IF((ISBLANK( Mailing_City__c ) &amp;&amp; 
                ISBLANK( Mailing_Country__c ) &amp;&amp; 
                ISBLANK( Mailing_Country_Code__c ) &amp;&amp; 
                ISBLANK( Mailing_Extra_Address__c ) &amp;&amp; 
                ISBLANK( Mailing_State__c ) &amp;&amp; 
                ISBLANK( Mailing_Street__c ) &amp;&amp; 
                ISBLANK( Mailing_Zipcode__c )), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <label>Address Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_From__c</fullName>
        <label>Address From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Primary Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Funded_By__c</fullName>
        <label>Application Funded By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Loaded_By__c</fullName>
        <label>Application Loaded By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arbitration_Opt_Out_Date__c</fullName>
        <label>Arbitration Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audio_HB_Frozen_Mode__c</fullName>
        <label>Audio/HB Frozen Mode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuthLimit__c</fullName>
        <label>Auth Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Payment_Discount__c</fullName>
        <label>Auto Payment Discount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Balance__c</fullName>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BalanceNightly__c</fullName>
        <description>Place holder for balances from the nightly sync process</description>
        <label>Balance</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlockCode__c</fullName>
        <label>Block Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandImage__c</fullName>
        <description>Brand image. This formula uses the hardcoded url of the logo images in Production. This allows us to automate the sandbox refresh process.</description>
        <formula>IF(Reference__c == &apos;BC02&apos;,     
     IMAGE(&quot;/resource/Logo_SpectrumCU&quot;,&quot;SpectrumCU&quot;, 35, 35 ),
     IMAGE(&quot;/resource/Logo_ChevronFCU&quot;,&quot;CFCU&quot;, 35, 35 )
)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>IF(Reference__c == &apos;BC01&apos;, &apos;Chevron&apos;, IF(Reference__c == &apos;BC02&apos;, &apos;Spectrum&apos;, &apos;Chevron&apos;))</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Eligibility1__c</fullName>
        <formula>CASE(CP_Eligibility__c, 
0, &apos;0: Ineligible&apos;,
1, &apos;1: Eligible&apos;,
&apos;&apos;)</formula>
        <label>Current Eligible Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Eligibility__c</fullName>
        <label>CP Eligibility</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <label>Card Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number_Last_4_Digits__c</fullName>
        <formula>RIGHT(Emp_Card_Number__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Number Last 4 Digits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Off_Amount__c</fullName>
        <label>Charge Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Off_Date__c</fullName>
        <label>Charge Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Combined_Account_ID__c</fullName>
        <label>Combined_Account_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Block_01__c</fullName>
        <description>Comment Block 1</description>
        <label>Comment 01</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Block_02__c</fullName>
        <label>Comment 02</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Block_03__c</fullName>
        <label>Comment 03</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Block__c</fullName>
        <label>Comments Block</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correspondence_Date__c</fullName>
        <label>Correspondence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_At_Branch1__c</fullName>
        <formula>Text(Created_At_Branch__c)  &amp;  &apos; &apos;  &amp;  
CASE(Created_At_Branch__c, 
72, &apos;eBranch&apos;,
0, &apos;Head Quarter&apos;,
200, &apos;Spectrum&apos;,
270, &apos;Spectrum&apos;,
299, &apos;Spectrum&apos;,
99, &apos;ATM&apos;,
96, &apos;Consumer Lending&apos;,
24, &apos;CA Bakersfield&apos;,
05, &apos;Brea&apos;,
20, &apos;Camino Media&apos;,
02, &apos;Concord&apos;,
09, &apos;El Segundo&apos;,
206, &apos;Spectrum Pleasant Hill&apos;,
21, &apos;Kern River/ China Grade&apos;,
04, &apos;Richmond&apos;,
03, &apos;San Ramon&apos;,
201, &apos;Spectrum San Francisco&apos;,
29, &apos;Denver&apos;,
06, &apos;Covington&apos;,
203, &apos;Spectrum Frederick Bechtel&apos;,
23, &apos;Pascagoula&apos;,
19, &apos;Aramco&apos;,
17, &apos;Bellaire&apos;,
14, &apos;1600 Smith&apos;,
208, &apos;Spectrum El Paso&apos;,
25, &apos;Post Oak&apos;,
202, &apos;Spectrum Houston Galleria&apos;,
207, &apos;Bountiful&apos;,
28, &apos;Salt Lake City Refinery&apos;,
205, &apos;Spectrum Reston&apos;,
01, &apos;San Francisco&apos;,
22, &apos;West Loop&apos;,
53, &apos;Electronic&apos;,
55, &apos;Inactive, Low Balance, No Loans*&apos;,
56, &apos;Inactive, Low Balance, Chargeoffs&apos;,
57, &apos;Inactive, Low Balance, Bad Address&apos;,
88, &apos;Operation Services&apos;,
93, &apos;Member Services&apos;,
98, &apos;Remote Access&apos;,
204, &apos;Spectrum Westridge Mall&apos;,
253, &apos;Spectrum Electronic&apos;,
255, &apos;Spectrum Inactive, Low Balance, No Loans*&apos;,
256, &apos;Spectrum Inactive, Low Balance, Chargeoffs&apos;,
257, &apos;Spectrum Inactive, Low Balance, Bad Address&apos;,
293, &apos;Spectrum Member Services Branch&apos;,                     
&apos;&apos;)</formula>
        <label>Created At Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_At_Branch__c</fullName>
        <label>Created At Branch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Episys_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By Episys User</label>
        <referenceTo>Episys_User__c</referenceTo>
        <relationshipName>EpisysUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Alias__c</fullName>
        <label>Created By User Alias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Episys__c</fullName>
        <formula>TEXT(Created_By_User__c)   &amp; &apos; &apos;  &amp; Created_By_User_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Episys User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Text__c</fullName>
        <label>Created By User Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <label>Created By User</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Expiration__c</fullName>
        <label>Credit Limit Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit LImit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Date__c</fullName>
        <label>Credit Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Branch1__c</fullName>
        <formula>Text(Current_Branch__c)  &amp;  &apos; &apos;  &amp; CASE(Current_Branch__c, 
72, &apos;eBranch&apos;,
99, &apos;ATM&apos;,
96, &apos;Consumer Lending&apos;,
0, &apos;Head Quarter&apos;,
200, &apos;Spectrum&apos;,
270, &apos;Spectrum&apos;,
24, &apos;CA Bakersfield&apos;, 
05, &apos;Brea&apos;, 
20, &apos;Camino Media&apos;, 
02, &apos;Concord&apos;, 
09, &apos;El Segundo&apos;, 
206, &apos;Spectrum Pleasant Hill&apos;, 
21, &apos;Kern River/ China Grade&apos;, 
04, &apos;Richmond&apos;, 
03, &apos;San Ramon&apos;, 
201, &apos;Spectrum San Francisco&apos;, 
29, &apos;Denver&apos;, 
06, &apos;Covington&apos;, 
203, &apos;Spectrum Frederick Bechtel&apos;, 
23, &apos;Pascagoula&apos;, 
19, &apos;Aramco&apos;, 
17, &apos;Bellaire&apos;, 
14, &apos;1600 Smith&apos;, 
208, &apos;El Paso&apos;, 
08, &apos;El paso&apos;,
25, &apos;Post Oak&apos;, 
202, &apos;Spectrum Houston Galleria&apos;, 
27, &apos;Bountiful&apos;, 
28, &apos;Salt Lake City Refinery&apos;, 
205, &apos;Spectrum Reston&apos;,
01, &apos;San Francisco&apos;, 
22, &apos;West Loop&apos;, 
53, &apos;Electronic&apos;, 
55, &apos;Inactive, Low Balance, No Loans*&apos;, 
56, &apos;Inactive, Low Balance, Chargeoffs&apos;, 
57, &apos;Inactive, Low Balance, Bad Address&apos;, 
88, &apos;Operation Services&apos;, 
93, &apos;Member Services&apos;, 
98, &apos;Remote Access&apos;, 
204, &apos;Spectrum Westridge Mall&apos;, 
253, &apos;Spectrum Electronic&apos;, 
255, &apos;Spectrum Inactive, Low Balance, No Loans*&apos;, 
256, &apos;Spectrum Inactive, Low Balance, Chargeoffs&apos;, 
257, &apos;Spectrum Inactive, Low Balance, Bad Address&apos;, 
293, &apos;Spectrum Member Services Branch&apos;,  
&apos;&apos;)</formula>
        <label>Current Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Branch__c</fullName>
        <label>Current Branch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_CP_Removed__c</fullName>
        <label>Date CP Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CP_Revoked__c</fullName>
        <label>Date CP Revoked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cert_Stepped_Up__c</fullName>
        <label>Date Cert Stepped Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Overdrawn__c</fullName>
        <label>Date Last Overdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <label>Dealer City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_State__c</fullName>
        <label>Dealer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_To_Income_Ratio__c</fullName>
        <label>Debt To Income Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DepLimit__c</fullName>
        <label>Dep Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Div_Last_Year__c</fullName>
        <label>Div Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Div_Post_Code1__c</fullName>
        <formula>Text(Div_Post_Code__c) &amp; &apos; &apos; &amp; 
CASE(Div_Post_Code__c, 
0.00, &apos;To Share&apos;, 
1.00, &apos;By Check&apos;, 
2.00, &apos;Transfer&apos;, 
3.00, &apos;Forfeit&apos;, 
&apos;&apos;)</formula>
        <label>Div Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Div_Post_Code__c</fullName>
        <label>Div Post Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Div_Rate1__c</fullName>
        <formula>Text(Div_Rate__c/1000) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Div Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Div_Rate__c</fullName>
        <label>Div Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Div_Type__c</fullName>
        <label>Div Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Div_YTD__c</fullName>
        <label>Div YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Draw_End_Date__c</fullName>
        <label>Draw End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_Available_Balance__c</fullName>
        <formula>IF(OR(ISBLANK(Available_Balance__c), Available_Balance__c == 0)  , &quot;&quot;,
IF(AND
      (OR(RESTRICTED_ACCESS__c&gt;0,Parent_Account__r.RESTRICTED_ACCESS__c&gt;0), 
       $Profile.Name  &lt;&gt; &quot;EPS&quot;,
       $Profile.Name  &lt;&gt; &quot;Fraud&quot;   ) ,
   &quot;****&quot;, IF( Available_Balance__c &lt; 1,&quot;&quot;,
   &quot;$&quot; + 
IF( 
  Available_Balance__c&gt;= 1000000, 
  TEXT(FLOOR(Available_Balance__c/ 1000000)) &amp; &quot;,&quot;,  &quot;&quot;) &amp; 
IF( 
  Available_Balance__c&gt;= 1000, 
  RIGHT(TEXT(FLOOR(Available_Balance__c/ 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
  RIGHT(TEXT(FLOOR(Available_Balance__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Available_Balance__c, 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Available_Balance__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Available_Balance__c, 1), 2) * 100, 99)) 
)

)
)
)</formula>
        <label>Available Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Balance__c</fullName>
        <formula>IF(OR(ISBLANK(Balance__c), Balance__c == 0), &quot;&quot;, 
IF(AND 
(OR(RESTRICTED_ACCESS__c&gt;0, 
Parent_Account__r.RESTRICTED_ACCESS__c&gt;0 
), 
$Profile.Name &lt;&gt; &quot;EPS&quot;, 
$Profile.Name &lt;&gt; &quot;Fraud&quot; 
) , 
&quot;****&quot;,
IF(ISNULL(Balance__c),&quot;&quot;, 
IF(Balance__c&lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp; 
IF(ABS(Balance__c) &gt;= 1000000, TEXT(FLOOR(ABS(Balance__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Balance__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Balance__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Balance__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Balance__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Balance__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Balance__c) , 1), 2) * 100, 99))) &amp; 
IF(Balance__c&lt; 0, &quot;)&quot;, &quot;&quot;) 
)
)
)</formula>
        <label>Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Card_Number__c</fullName>
        <formula>IF(AND(RecType__c = &quot;CARD&quot;,OR(RESTRICTED_ACCESS__c&gt;0,Parent_Account__r.RESTRICTED_ACCESS__c&gt;0)),
   &quot;************&quot; +  RIGHT(Card_Number__c, 4) ,  
    Card_Number__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episys_User_ID__c</fullName>
        <label>Episys User ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FrozenTranslated__c</fullName>
        <label>Frozen Translated</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value_Flag__c</fullName>
        <description>Code value to indicate that an ACCT level account is considered 1 (high value), 2 (high potential), or 0 (no designation).</description>
        <label>High Value Flag</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID1__c</fullName>
        <label>Share ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_Code__c</fullName>
        <label>IRS Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Last_Year__c</fullName>
        <label>Interest Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Past_Due__c</fullName>
        <label>Interest Past Due</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate1__c</fullName>
        <formula>Text(Interest_Rate__c)  &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Margin1__c</fullName>
        <formula>Text(Interest_Rate_Margin__c) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate Margin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Margin_Sign__c</fullName>
        <label>Interest Rate Margin Sign</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Margin__c</fullName>
        <label>Interest Rate Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_YTD__c</fullName>
        <label>Interest Paid YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invalid_Password_Attempts__c</fullName>
        <label>Invalid Password Attempts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Div_Amount__c</fullName>
        <label>Last Div Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Div_Date__c</fullName>
        <label>Last Div Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_HB_Logon_Date__c</fullName>
        <label>Last HB Logon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_HB_Password_Change__c</fullName>
        <label>Last HB Password Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Date__c</fullName>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_logon_Date__c</fullName>
        <label>Last Logon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Due__c</fullName>
        <label>Late Charge Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Unpaid__c</fullName>
        <label>Late Charge Unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limit_Amount__c</fullName>
        <label>Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_code__c</fullName>
        <label>Loan Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocId__c</fullName>
        <label>LocId</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator__c</fullName>
        <label>Locator</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MICR_Account_Number__c</fullName>
        <label>MICR Acct Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_From1__c</fullName>
        <description>Indicator to show where the address on an ACCT record came from. 
M = Name Mailing Record 
P = Primary Name Record</description>
        <formula>CASE( Mailing_Address_From__c, 
&apos;M&apos;, &apos;Name Mailing Record&apos;, 
&apos;P&apos;, &apos;Primary Name Record&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If found, the address on an ACCT record will come from the&quot;Name Mailing Record&quot;.  If not found the address will come from the &quot;Primary Name Record&quot;.</inlineHelpText>
        <label>Mailing Address From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_From__c</fullName>
        <description>Indicator to show where the address on an ACCT record came from.
M = Name Mailing Record
P = Primary Name Record</description>
        <inlineHelpText>Indicator to show where the address on an ACCT record came from.
M = Name Mailing Record
P = Primary Name Record</inlineHelpText>
        <label>Mailing Address From</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code__c</fullName>
        <label>Mailing Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Extra_Address__c</fullName>
        <label>Mailing Extra Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Map_Link__c</fullName>
        <formula>IF(   ISBLANK(Mailing_Street__c) , &quot;&quot;, 
   HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; 
              Mailing_Street__c &amp; &apos;,+&apos; &amp; 
              Mailing_City__c &amp; &apos;,+&apos; &amp; 
              Mailing_State__c &amp; &apos;,+&apos; &amp; 
              Mailing_Country__c &amp; &apos;,+&apos; &amp; 
              Mailing_Zipcode__c  ,
      &quot;Click for Map&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zipcode__c</fullName>
        <label>Mailing Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Post_Code__c</fullName>
        <label>Maturity Post Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Group_Seg__c</fullName>
        <label>Member Group / Seg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mortgage_Name_1__c</fullName>
        <label>Mortgage Name 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Name_2__c</fullName>
        <label>Mortgage Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEGATIVEBALANCEDATE__c</fullName>
        <label>Negative Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOTENUMBER__c</fullName>
        <label>Note Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODT_OPT_IN_OPTION_OTHER__c</fullName>
        <label>ODT Opt-In Option Other</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_OPT_IN_OPTION_RAGE__c</fullName>
        <label>ODT Opt-In Option Reg E</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_OPT_IN_STATUS_OTHER__c</fullName>
        <label>ODT Opt-In Status Other</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_OPT_IN_STATUS_RAGE__c</fullName>
        <label>ODT Opt-In Status Reg E</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODT_Opt_In_Option_Other1__c</fullName>
        <formula>CASE(ODT_OPT_IN_OPTION_OTHER__c, 
0, &apos;0: Auth/Courtesy Pay Fee/NSF Fee&apos;,
4, &apos;4: No Auth/Courtesy Pay Fee/NSF Fee&apos;,
&apos;&apos;)</formula>
        <label>ODT Opt-In Option Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODT_Opt_In_Option_Reg_E1__c</fullName>
        <formula>CASE(ODT_OPT_IN_OPTION_RAGE__c, 
1, &apos;1: Auth/Courtesy Pay Fee/No NSF Fee&apos;, 
7, &apos;7: No Auth/No Courtesy Pay Fee/No NSF Fee&apos;,  
&apos;&apos;)</formula>
        <label>ODT Opt-In Option Reg E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODT_Opt_In_Status_Other1__c</fullName>
        <formula>CASE(ODT_OPT_IN_STATUS_OTHER__c, 
0, &apos;0: Opt Out&apos;, 
1, &apos;1: Opt In&apos;,
2, &apos;2: No Response&apos;, 
&apos;&apos;)</formula>
        <label>ODT Opt-In Status Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODT_Opt_In_Status_Reg_E1__c</fullName>
        <formula>CASE(ODT_OPT_IN_STATUS_RAGE__c, 
0, &apos;0: Opt Out&apos;, 
1, &apos;1: Opt In&apos;,  
&apos;&apos;)</formula>
        <label>ODT Opt-In Status Reg E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_MICR_NUMBER__c</fullName>
        <label>Old MICR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPEN_DATE__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORIGINALBALANCE__c</fullName>
        <label>Original Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ORIGINALDATE__c</fullName>
        <label>Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OVERDRAFTTOLERANCE__c</fullName>
        <label>Overdraw Tolerance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Onboarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PARTIALPAYMENT__c</fullName>
        <label>Partial Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PASTDUEPAYMENT__c</fullName>
        <label>Past Due Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYMENTDUE__c</fullName>
        <label>Payment Due</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYMENTFREQUENCY1__c</fullName>
        <formula>Text(PAYMENTFREQUENCY__c) &amp; &apos; &apos; &amp; CASE(PAYMENTFREQUENCY__c, 
00, &apos;Single pay&apos;, 
01, &apos;Annual&apos;,
02, &apos;Semiannual&apos;,
03, &apos;Quarterly&apos;,
04, &apos;Monthly&apos;,
05, &apos;Semimonthly&apos;,
06, &apos;Biweekly skip first&apos;,
07, &apos;Biweekly skip last&apos;,
08, &apos;Biweekly&apos;,
09, &apos;Weekly&apos;,
10, &apos;Immediate&apos;,
11, &apos;Weekly skip first&apos;,
12, &apos;Weekly skip last&apos;,
13, &apos;Bimonthly&apos;,
14, &apos;Amortize Schedule&apos;,
&apos;&apos;)</formula>
        <label>Payment Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENTFREQUENCY__c</fullName>
        <label>Payment Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENTMETHOD1__c</fullName>
        <formula>Text(PAYMENTMETHOD__c) &amp; &apos; &apos; &amp; CASE(PAYMENTMETHOD__c, 
0, &apos;Cash&apos;, 
1, &apos;Coupon&apos;,
2, &apos;Auto transfer&apos;,
3, &apos;Payroll&apos;,
4, &apos;Payroll after due&apos;,
5, &apos;Distribution&apos;,
6, &apos;Distribution after due&apos;,
7, &apos;Scheduled auto transfer&apos;,
8, &apos;Scheduled auto transfer after due&apos;,
9, &apos;Amortization transfer&apos;,
&apos;&apos;)</formula>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENTMETHOD__c</fullName>
        <label>Payment Method</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT__c</fullName>
        <label>Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>